# LLM-Property-Copy-Evaluation

./: .pre-commit-config.yaml  README.md  evals.ipynb  pyproject.toml
logs/: 2026-06-15T13-28-36-00-00_listing-generator-eval_8fGrnjAdXw8Y8qtBQRc2mS.eval  2026-06-15T13-29-20-00-00_listing-generator-eval_ZVXjdcmv7dzYUoZEvUYUoG.eval  2026-06-15T13-40-58-00-00_listing-generator-eval_GcYjegVDC3SAwLhAixFvSt.eval  2026-06-15T13-41-39-00-00_listing-generator-eval_QShGWyZ5sKpddSMPK4y64r.eval  2026-06-15T13-48-18-00-00_listing-generator-eval_kVS3m5AS6wxU9VpHB5p9bv.eval  2026-06-15T15-35-43-00-00_property-copy-eval_MoZUY5ZzJU87BACs2JHJFz.eval  2026-06-15T16-27-37-00-00_property-copy-eval_6hYpKvcfkTdoYp77RBHGRi.eval  2026-06-15T20-44-52-00-00_property-copy-eval_4QRjNaU5vScZCbG3qF539k.eval  2026-06-15T22-13-16-00-00_property-copy-eval_7Sg6BTfX8HuoGfa4f57iHQ.eval  2026-06-15T22-15-24-00-00_property-copy-eval_2hnGePg8JKrYmNnAqKJXHw.eval  2026-06-15T22-20-44-00-00_property-copy-eval_VgAfb7L6tBq3gvQEPqkRjo.eval
src/data/: mock_data.json
src/property_listing/: generator.py  models.py  schema.py  utils.py
src/property_listing/eval/: pipeline.py  read_eval.py  scorers.py
src/property_listing/services/: llm.py
tests/: conftest.py  fixtures.py  test_generator.py  test_groundedness_scorer.py  test_structure_scorer.py
