[project]
name = "llm-property-copy-eval"
version = "0.1.0"
description = "LLM evaluation of property copy generation"
readme = "README.md"
requires-python = "==3.13.*"

dependencies = [
    "inspect-ai>=0.3.0",
    "pytest",
    "pydantic",
    "google-genai>=0.1.1",
    "anthropic",
    "pandas",
    "python-dotenv",
    "matplotlib"
]


[tool.uv]
package = true