[project]
name = "llm-property-copy-eval"
version = "0.1.0"
description = "LLM evaluation of property copy generation"
readme = "README.md"
requires-python = "==3.13.*"

dependencies = [
    "inspect-ai>=0.3.0",
    "pytest",
    "pytest-asyncio",
    "pydantic",
    "google-genai>=0.1.1",
    "anthropic",
    "pandas",
    "python-dotenv",
    "matplotlib",
    "ipywidgets"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401"]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.17",
]
